re PR c++/23089 (internal compiler error: in int_mode_for_mode, at stor-layout.c:251 at -O1)

PR c++/23089
	* decl.c (require_complete_types_for_parms): Mark incomplete types
	as invalid.

	* g++.dg/other/incomplete1.C: New test.

From-SVN: r103338